# umapro

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  遶ｶ鬥ｬ莠域Φ繝・・繝ｫ_DB險ｭ險域嶌_v1.md  遶ｶ鬥ｬ莠域Φ繝・・繝ｫ_逕ｻ髱｢險ｭ險域嶌_v1.md  遶ｶ鬥ｬ莠域Φ繝・・繝ｫ_隕∽ｻｶ螳夂ｾｩ_v1.md
apps/batch/: .gitignore  pyproject.toml  snapshot_config.yaml
apps/batch/reports/: 20260620-20260621_learning_method_review.md
apps/batch/tests/: test_builder_unit.py  test_upsert.py
apps/batch/uma/: config.py
apps/batch/uma/analysis/: phase1_eval.py
apps/batch/uma/backtest/: job.py  processor.py
apps/batch/uma/db/: client.py  upsert.py
apps/batch/uma/features/: __init__.py  builder.py  job.py
apps/batch/uma/ingest/: __init__.py  job.py  jra.py  jra_job.py  keibalab.py  keibalab_job.py  netkeiba.py
apps/batch/uma/jobs/: base.py
apps/batch/uma/models/: __init__.py  train_binary.py  train_no_odds.py  train_overlay.py  train_ranker.py
apps/batch/uma/phase0/: baseline.py  metrics_lib.py  run.py  walkforward.py
apps/batch/uma/predictions/: backfill_job.py  course_form_model.py  job.py  lgbm_ranker.py  odds_drift_model.py  place_odds_model.py  rule_based.py
apps/web/: package.json  pnpm-lock.yaml
docs/: 00_phase0_design.md  01_PHASE1_EVALUATION_PLAN.md  02_PHASE2_FEATURE_ENGINEERING_PLAN.md  03_PHASE3_ROI_OPTIMIZATION.md  04_PHASE4_MULTI_BET_EXPANSION.md  feature_engineering_design.md  keiba_roi_review.md  prediction_model_design.md
supabase/: config.toml
supabase/migrations/: 20260619000001_master_tables.sql  20260619000002_race_tables.sql  (+7 more)
(+35 files in other folders)
