[project]
name = "uma-batch"
version = "0.1.0"
description = "競馬予想ツール データパイプライン"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.10",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
